styles/_part-article.scss
/* Single Articles (posts)
---------------------------------------------------------------------------------------------------- */

.article {
  padding: 100px 0 79px;

  // Add the fadeinup animation.

  animation-name: fadeinup;
  animation-duration: .75s;
  animation-fill-mode: both;

  .inner {

    // Base post styles used for articles and pages.

    .post {
      width: 60%;
      float: left;
      margin-left: 40%;
      position: relative;

      @media ('max-width: 860px') {
        width: calc(100% - 60px);
        margin-left: 60px;
        transition-duration: 0.5s;

        &.toggled {
          opacity: 0.25;
          -webkit-filter: blur(5px);
          filter: blur(5px);
        }
      }

      &.page {
        margin-left: 0;
      }

      article {
        .meta {
          margin-bottom: 37px;
          font-size: 12px;
          text-transform: uppercase;
          font-weight: 900;
        }

        h2 {
          margin-bottom: 39px;
        }

        h3, h4, h5, h6,
        blockquote {
          margin: 41px 0 13px;
          font-family: 'Lora', serif;
          font-size: 30px;
          line-height: 1.2;
          color: rgba($black, 0.95);
        }

        blockquote {
          padding-left: 30px;
          margin: 41px 0 43px;
          border-left: 1px solid rgba($black, 0.05);
          font-size: 24px;
          line-height: 1.4;
        }

        p {
          margin-bottom: 14px;
        }

        ul {
          padding-left: 15px;
          margin-bottom: 14px;
          list-style: disc;
        }

        ol {
          padding-left: 15px;
          margin-bottom: 14px;
          list-style: decimal;
        }

        img {
          width: 100%;
          margin: 39px 0 44px;
        }

        .video {
          width: 100%;
          position: relative;
          margin: 39px 0 44px;

          &:after {
            padding-top: 56.2%;
            display: block;
            content: '';
          }

          iframe {
            width: 100%;
            height: 100%;
            position: absolute;
            top: 0;
            left: 0;
          }
        }
      }

      // The continue reading fade and button.

      .continue {
        width: 100%;
        height: 200px;
        position: absolute;
        bottom: 0;
        left: 0;
        background: linear-gradient(
          to bottom,
          rgba(#ffffff, 0.0),
          #ffffff 80%
        );

        .actions {
          width: 100%;
          position: absolute;
          bottom: 0;
          left: 0;

          .button {
            margin-right: 10px;
            margin-bottom: 10px;
          }
        }
      }
    }

    // Post sidebar widgets.

    .side {
      width: calc(40% - 60px);
      min-height: 200px;
      position: absolute;
      top: 0;
      left: 0;
      background-color: $white;
      box-shadow: 0 5px 30px rgba($black, 0.05);

      @media ('max-width: 860px') {
        width: 100%;
        left: -100%;
        z-index: 20;
        transition-duration: 0.5s;

        &.toggled {
          left: 0;
        }
      }

      .widget {
        padding: 30px 30px;
        border-bottom: 1px solid $white-gray;
        position: relative;

        h3 {
          margin-bottom: 15px;
          font-family: 'Lora', serif;
          color: rgba(0, 0, 0, 0.95);
          font-size: 24px;
          line-height: 1.2;
        }

        p {
          color: rgba($black, 0.5);
        }
      }

      // For post archive pages.

      &.archive {
        border-radius: 0 0 6px 6px;

        .group {
          width: 100%;

          &:not(.current) {
            position: absolute;
            visibility: hidden;
            opacity: 0;
          }
        }

        .widget {
          cursor: pointer;

          &:after {
            width: 100%;
            height: 100%;
            position: absolute;
            bottom: 0;
            left: 0;
            background: linear-gradient(
              to bottom,
              rgba(#ffffff, 0.0),
              #ffffff 100%
            );
            content: '';
            transition-duration: 0.25s;
          }

          &:hover {
            &:after {
              width: 100%;
              height: 50%;
            }
          }

          .meta {
            width: 100%;
            float: left;
            margin-bottom: 14px;
            font-size: 12px;
            text-transform: uppercase;
            font-weight: 900;
          }

          p {
            height: 71px;
            overflow: hidden;
          }
        }

        nav {
          height: 30px;
          text-align: center;

          a {
            width: 50%;
            height: 30px;
            float: left;
            position: relative;
            background-color: rgba($black, 0.9);
            font-weight: 900;
            line-height: 29px;
            color: rgba($white, 0.5);

            &.more {
              color: rgba($white, 0.95);

              svg {
                fill: rgba($white, 0.95);
              }
            }

            svg {
              position: absolute;
              top: 50%;
              left: 50%;
              transform: translate(-50%, -50%);
              fill: rgba($white, 0.5);
              transition-duration: 0.25s;
            }

            &:hover {
              color: rgba($white, 0.95);

              svg {
                fill: rgba($white, 0.95);
              }

              &.older {
                svg {
                  left: calc(50% - 10px);
                }
              }

              &.newer {
                svg {
                  left: calc(50% + 10px);
                }
              }
            }

            &.older {
              border-right: 1px solid rgba($white, 0.25);
              border-radius: 0 0 0 6px;
            }

            &.newer {
              border-radius: 0 0 6px;
            }
          }
        }
      }
    }
  }

  // Featured articles and pages.

  &.featured {
    background-color: $white-gray;
    padding: 100px 0 86px;
  }

  &.featured,
  &.page {
    position: relative;

    .inner {
      max-width: 600px;

      .post {
        width: 100%;
        float: none;
        margin: 0;

        article {
          .meta {
            width: 100%;
            text-align: center;
          }

          h2 {
            width: 100%;
            text-align: center;
          }

          h3 {
            width: 130%;
            margin: 41px 0 43px -15%;
            font-family: 'Lora', serif;
            color: rgba($black, 0.95);
            font-size: 30px;
            line-height: 1.2;
            text-align: center;
          }

          img {
            width: 120%;
            margin-left: -10%;
          }
        }

        .continue {
          background: linear-gradient(
            to bottom,
            rgba(#fafafa, 0.0),
            #fafafa 80%
          );

          .actions {
            text-align: center;

            .button {
              float: none;
              display: inline-block;
            }
          }
        }
      }
    }
  }
}

